
syntax = "proto3";

package avikom.unity;

import "avikom/options/options.proto";
import "avikom/unity/game_object.proto";

option csharp_namespace = "Avikom.Types.Unity";
option go_package = "gitlab.ub.uni-bielefeld.de/avikom/go-types/avikom/unity";
option java_package = "app.avikom.types.unity";


/**
 * This message describes a task config and contains context-specific objects.
 * All assets should have a parent that represents their location within a scene.
 * @author: Alexander Neumann <alneuman@techfak.uni-bielefeld.de>
 */
message TaskConfig {
    option (avikom.options.schema_definition) = true;

    string task_name = 1 [ (avikom.options.schema).unique = true ];  /// name of the task that is configured
    repeated GameObject assets  = 3;                                 /// a list of assets that represent (virtual) task-specific assets
}
